--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 :root {
     font-size: 125%;
-    --pico-typography-spacing-vertical: 1.1em;
 }
 
 h1 {
@@ -13,7 +12,7 @@ h1 img {
     border-radius: 100%;
     background-origin: content-box;
     padding: 0;
-    height: 0.7em;
+    height: 0.75em;
     vertical-align: baseline;
 }
 
@@ -40,4 +39,12 @@ h1 img {
 .lettre-mal-placee {
     background-image: radial-gradient(ellipse at center, #FFBF00A0 70%, transparent 70%);
     background-repeat: no-repeat;
+}
+
+#volumeCheckbox {
+    display: none;
+}
+
+#volumeCheckbox:checked ~ label svg path {
+    d: path("M560-131v-82q90-26 145-100t55-168q0-94-55-168T560-749v-82q124 28 202 125.5T840-481q0 127-78 224.5T560-131ZM120-360v-240h160l200-200v640L280-360H120Zm440 40v-322q47 22 73.5 66t26.5 96q0 51-26.5 94.5T560-320ZM400-606l-86 86H200v80h114l86 86v-252ZM300-480Z");
 }
