--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 img {
     padding: 0.15em;
     text-align: center;
     border-radius: 0.3rem;
-    vertical-align: center;
+    vertical-align: text-top;
 }
   
 .lettre-bien-placee {
