--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 
 h1 img,
 h2 img {
-  background-color: var(--pico-h1-color);
+  background-color: currentColor;
   border-radius: 100%;
   background-origin: content-box;
   padding: 0;
